<resources>
    <string name="app_name">TripsterPro для гидов</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try again</string>
    <string name="error">Error</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="remindPassword">Напомнить пароль</string>
    <string name="loginContentError">Этот адрес какой-то странный, пожалуйста, введите корректный адрес электронной почты.</string>
    <string name="loginError">Этот адрес не зарегистрирован. Зарегистрируйтесь для использования сервиса.</string>
    <string name="passwordError">Вы ввели неверный пароль. Попробуйте еще раз или восстановите доступ, если забыли пароль.</string>
    <string name="loginDialogTitle">Произошла ошибка</string>
    <string name="loginDialogText">Некорректные учетные данные.</string>
    <string name="no_orders_in_work">Нет заказов в работе</string>
    <string name="ok">ОК</string>
    <string name="guide_duplicated_order">guide-duplicated-order</string>
    <string name="guide_duplicated_order_txt">Дубликат другого заказа</string>
    <string name="send_again">Отправить повторно</string>
    <string name="profile">Профиль</string>
    <string name="order_confirmed">Заказ подтвержден</string>
    <string name="order_canceled">Заказ отменен</string>
    <string name="max_person_count">%1$d макс.</string>
    <string name="calendar">Календарь</string>
    <string name="order">Заказы</string>
    <string name="all_orders">Все заказы</string>
    <string name="close_time">Закрыть время</string>
    <string name="total">Итого</string>
    <string name="edit">Изменить</string>
    <string name="editing_order">Изменение заказа</string>
    <string name="order_edited">Заказ изменен</string>
    <string name="save_edits">Сохранить изменения</string>
    <string name="all_at_work">Все в работе</string>
    <string name="on_excursion_time">На время этой экскурсии</string>
    <string name="on_that_day">На этот день</string>
    <string name="on_Tripster">На Трипстере</string>
    <string name="edit_price">Изменение цены</string>
    <string name="paying_you">Оплата вам</string>
    <string name="confirm_time">Время проведения</string>
    <string name="edit_order_desc">Путешественник получит письмо с измененными параметрами, а также это отобразится в переписке на странице заказа. Убедитесь, что он прочитает оповещение об изменениях и согласится с ними</string>
    <string name="confirm_order_condition_txt">Подтверждая заказ, вы соглашаетесь провести мероприятие в назначенное время и принимаете условия использования</string>
    <string name="confirm_order_condition_txt_underLined">условия использования</string>
    <string name="confirm_order_condition_txt_individual">Чтобы изменить стоимость или количество участников у забронированного заказа, напишите на orders@tripster.ru</string>
    <string name="confirm_order_condition_txt_individual_underLined">orders@tripster.ru</string>
    <string name="unread">Непрочитанные</string>
    <string name="no_unread">Нет непрочитанных</string>
    <string name="waiting_for_confirmation_count">Ждет подтверждения</string>
    <string name="no_waiting_for_confirmation">Нет ожидающих подтверждения</string>
    <string name="pending_payment">Ждут оплаты</string>
    <string name="booked">Забронированы</string>
    <string name="no_booked">Нет забронированных</string>
    <string name="no_pending_payment">Нет ожидающих оплаты</string>
    <string name="booked_order">Забронирован</string>
    <string name="completed">Завершены</string>
    <string name="ended">Завершен</string>
    <string name="no_completed">Нет завершенных</string>
    <string name="after_payment_title">После оплаты не принимать заказы</string>
    <string name="update">Обновить</string>
    <string name="select_date">Выберите дату</string>
    <string name="canceled">Отменены</string>
    <string name="canceled_event">Отменен</string>
    <string name="canceled_by_guide">Отменен вами</string>
    <string name="canceled_by_system">Отменен автоматически</string>
    <string name="canceled_title">Отменено</string>
    <string name="close_booking">Закрыть бронирование</string>
    <string name="close_booking_question">Закрыть бронирование?</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="close_booking_dialog_body">Все неоплаченные заказы будут отменены, а новые не появятся. Это действие необратимо</string>
    <string name="booking_is_closed">Закрыто бронирование</string>
    <string name="no_canceled">Нет отмененных</string>
    <string name="price">Стоимость: %1$s</string>
    <string name="members_count">Количество участников</string>
    <string name="members_count_dynamic">Количество участников · %1$d</string>
    <string name="members_count_dynamic_without_dot">Количество участников %1$d</string>
    <string name="email_and_phone">Электронная почта и телефон</string>
    <string name="confirm">Подтвердить</string>
    <string name="booking_is_open">Открыто бронирование</string>
    <string name="open_booking">Открыть бронирование</string>
    <string name="phone">Телефон</string>
    <string name="no_order">Нет заказов</string>
    <string name="order_confirmation">Подтверждение заказа</string>
    <string name="meeting_place">Место встречи</string>
    <string name="user_contacts">Контакты путешественника</string>
    <string name="traveler">Путешественник</string>
    <string name="time_not_specified">Время не указано</string>
    <string name="specify_the_number_of_members">Укажите количество участников</string>
    <string name="time">Время</string>
    <string name="adults">Взрослые</string>
    <string name="pick_date">Выберите дату</string>
    <string name="guid_will_meet_you">Гид встретит вас возле вашего отеля</string>
    <string name="order_number_and_place">№%1$d · %2$s</string>
    <string name="no_order_text">Здесь появится список ваших заказов.\nОтсюда можно будет подтверждать их,\n уточнять детали и общаться \nс путешественниками</string>
    <string name="canceled_by_traveler">Отменен путешественником</string>
    <string name="orders_title">Заказы</string>
    <string name="pending_payment_status">Ждет оплаты</string>
    <string name="calendar_title">Календарь</string>
    <string name="profile_title">Профиль</string>
    <string name="tour">Тур</string>
    <string name="tour_type">tour</string>
    <string name="private_type">private</string>
    <string name="calendar_type">calendar</string>
    <string name="close_time_type">closeTime</string>
    <string name="choose_date_type">chooseDay</string>
    <string name="private_phone_type">private phone</string>
    <string name="tour_phone_type">tour phone</string>
    <string name="orders">orders</string>
    <string name="chat_type">chat</string>
    <string name="cancelled_type">cancelled</string>
    <string name="tour_days">%1$d дней</string>
    <string name="waiting_for_confirmation">Ждут подтверждения</string>
    <string name="waiting_for_confirmation_tour">Ждет подтверждения · %1$s</string>
    <string name="hour_is_missing">Время не указано</string>
    <string name="confirm_date">Дата проведения</string>
    <string name="my_contacts">Мои контакты</string>
    <plurals name="people_count_tour">
        <item quantity="one">%1$d участник</item>
        <item quantity="two">%1$d участника</item>
        <item quantity="few">%1$d участника</item>
        <item quantity="many">%1$d участников</item>
        <item quantity="other">%1$d участника</item>
    </plurals>
    <plurals name="people_count_group_tour">
        <item quantity="one">%1$d уч.</item>
        <item quantity="two">%1$d уч.</item>
        <item quantity="few">%1$d уч.</item>
        <item quantity="many">%1$d уч.</item>
        <item quantity="other">%1$d уч.</item>
    </plurals>
    <plurals name="places_count_tour">
        <item quantity="one">%1$d место</item>
        <item quantity="two">%1$d места</item>
        <item quantity="few">%1$d мест</item>
        <item quantity="many">%1$d мест</item>
        <item quantity="other">%1$d места</item>
    </plurals>
    <plurals name="available_places_count">
        <item quantity="one">Доступно для бронирования %1$d место</item>
        <item quantity="two">Доступно для бронирования %1$d места</item>
        <item quantity="few">Доступно для бронирования %1$d места</item>
        <item quantity="many">Доступно для бронирования %1$d мест</item>
        <item quantity="other">Доступно для бронирования %1$d мест</item>
    </plurals>
    <string name="price_on_tripster">%1$s%2$s на Трипстере</string>
    <string name="price_to_guide">%1$s%2$s оплата вам</string>
    <string name="price_value">%1$s%2$s</string>
    <string name="price_currency_value">%1$s%2$s</string>
    <string name="open_ticket_link">experience/order/%1$d/ticket/</string>
    <string name="email_phone_error">Этот адрес какой-то странный, пожалуйста, \nвведите корректный адрес электронной почты.\nУкажите телефон в международном формате \n+7 926 111 11 11</string>
    <string name="no_people_count_tour">Количество участников не указано</string>
    <string name="user_contact_info">Телефон и эл. почта станут доступны после оплаты. Как увидеть до оплаты</string>
    <string name="user_contact_info_colored">Как увидеть до оплаты</string>
    <string name="number">№%1$d</string>
    <string name="location">Многогранный Стамбул</string>
    <string name="date_or_duration">Дата или период</string>
    <string name="date_or_duration_text">Выбрать %1$s</string>
    <string name="events_on_that_days">События в выбранные дни</string>
    <string name="events_on_that_day">События в выбранный день</string>
    <string name="what_to_show">Что показывать</string>
    <string name="date_content">9 апр, сб 10:00–16:00</string>
    <string name="name">Елена</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="call_error_title">Что-то пошло не так</string>
    <string name="connecting">Соединение…</string>
    <string name="unread_comments">Непрочитанные сообщения</string>
    <string name="reject_info">На привлечение этого заказа мы потратили от %1$d до %2$d %3$s. Если вы заняты в выбранный день, попробуйте договориться о другой дате. Также не забывайте закрывать занятые дни в календаре. Отмены влияют на вашу статистику, сейчас вы подтверждаете %4$s заказов</string>
    <string name="call_error_message">Произошла техническая ошибка,\n попробуйте снова</string>
    <string name="no_internet_title">Нет интернета</string>
    <string name="no_internet_message">Проверьте подключение\n и попробуйте снова</string>
    <string name="is_prod_analytics_enabled">isProdAnalyticsEnabled</string>
    <string name="cancel">Отмена</string>
    <string name="logout">Выйти</string>
    <string name="support_info_text">Работаем с 9 до 21 часа по Москве. \nВерсия приложения  %1$s (%2$d)</string>
    <string name="support_title">Служба поддержки</string>
    <string name="telegram">Telegram</string>
    <string name="vk_text">ВКонтакте</string>
    <string name="mail_text">Написать на почту</string>
    <string name="phone_text">Позвонить</string>
    <string name="log_out_dialog">Вы уверены, что хотите выйти \nиз аккаунта?</string>
    <string name="debug_title">Debug</string>
    <string name="save_user">сохранять пользователя</string>
    <string name="crash_event_title">Crash\\Anr\\Non-fatal</string>
    <string name="crash">Crash</string>
    <string name="non_fatal">Non-fatal</string>
    <string name="anr">Anr</string>
    <string name="close">Close</string>
    <string name="staging">Staging</string>
    <string name="production">Production</string>
    <string name="custom">Custom</string>
    <string name="input_url">Enter/paste base url here</string>
</resources>