<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_16">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogTitle"
        style="@style/Text.20.700"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/close_booking_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogBody"
        style="@style/Text.17.400"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/close_booking_dialog_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
        app:lineHeight="@dimen/space_24" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/closeBooking"
        style="@style/Background.tomat.17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/close_booking"
        app:layout_constraintTop_toBottomOf="@+id/dialogBody" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        style="@style/Background.gray.17.8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/closeBooking" />

</androidx.constraintlayout.widget.ConstraintLayout>
