<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_inset">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bodyLogOut"
        style="@style/Text.14.400"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_24"
        android:layout_marginTop="@dimen/space_24"
        android:text="@string/log_out_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/positive"
        style="@style/Text.14.500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/space_34"
        android:layout_marginEnd="@dimen/space_36"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyLogOut" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/negative"
        style="@style/Text.14.500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_32"
        android:text="@string/cancel"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/positive"
        app:layout_constraintEnd_toStartOf="@id/positive"
        app:layout_constraintTop_toTopOf="@+id/positive" />

</androidx.constraintlayout.widget.ConstraintLayout>